<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/liner_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:weightSum="2"
        tools:context=".activities.LoginActivity">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context=".activities.LoginActivity">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="82dp"
                android:background="@drawable/my_button_bg_light"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button_bg_light"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button_bg_light"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/my_button_bg_light"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_marginTop="40dp"
                android:background="@drawable/selector_light"
                android:text="@string/text_register_now" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/appCompatTextViewLoginLink"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/txt_for_auth"
                android:textSize="16sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/back_button"
                android:gravity="center"
                android:text="@string/text_login"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/registration_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:gravity="center"
                android:text="registration"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
