<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allerates.appforyou.activities.DetailedActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:showIn="@layout/activity_main">

        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recycler_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scrollbars="vertical" />-->

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light">

        <LinearLayout
            android:id="@+id/liner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/back_def_point"
                android:cropToPadding="true" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/new_photo_transperent" />
            </FrameLayout>



            <LinearLayout
                android:id="@+id/reviews_card_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:animateLayoutChanges="false"
                android:animationCache="false"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="40dp"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:numStars="5"
                        android:rating="4.0"
                        android:theme="@style/RatingBar" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/comments_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0"
                            android:textColor="@color/text_color_det"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="Reviews"
                            android:textColor="@color/text_color_det"
                            android:textSize="18sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foregroundGravity="left"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="40dp"
                        app:srcCompat="@mipmap/ic_reviews" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackDey"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/site"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_world"
                        android:text="Сайт" />

                    <TextView
                        android:id="@+id/tv_site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="40dp"
                        android:gravity="right|end"
                        android:text="frfr"
                        android:textColor="@color/text_color_det"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/textView223"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_phone"
                        android:text="Номер" />

                    <TextView
                        android:id="@+id/tv_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="40dp"
                        android:gravity="right|end"
                        android:textColor="@color/text_color_det"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/textView224"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_calendar"
                        android:text="Дни работ" />

                    <TextView
                        android:id="@+id/tv_days_of_work"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="40dp"
                        android:gravity="right|end"
                        android:textColor="@color/text_color_det"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_place_dr"
                        android:text="Адрес" />

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="40dp"
                        android:gravity="right|end"
                        android:textColor="@color/text_color_det"
                        android:textSize="18sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:src="@mipmap/ic_time"
                        android:text="Адрес" />

                    <TextView
                        android:id="@+id/tv_work_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center"
                        android:layout_marginRight="40dp"
                        android:gravity="right|end"
                        android:textColor="@color/text_color_det"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reviews_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false"
                android:animationCache="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_currencies"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:text="@string/txt_currencies"
                    android:textColor="@color/colorTextHint"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackDey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_the_minimum_amount"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_currency2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="36dp"
                    android:text="450"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorTextHint">

                </FrameLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_the_payment_method"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorTextHint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="36dp"
                    android:text="450"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/colorTextHint"></FrameLayout>

            </LinearLayout>
            <!--<ListView-->
            <!--android:id="@+id/delivery_list"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_marginTop="8dp" />-->

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/grid_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackDey"
                android:columnWidth="50dp"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:padding="20dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"></GridView>


            <TextView
                android:id="@+id/tv_additional_information"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="additional information"
                android:textAllCaps="true"
                android:textColor="@color/colorTextHint"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackDey"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_payment_methods2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="36dp"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
